# MIRIX

./: .gitignore  MANIFEST.in  README.md  main.py  main.spec  pyproject.toml  requirements.txt  setup.py  test_memory.py
database/: migrate_database_postgresql.sql  run_postgresql_migration.py  run_sqlite_migration.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: electron.js  macWindowManager.js  nativeCaptureHelper.js  preload.js
frontend/scripts/: build-backend.js
frontend/src/: App.js  i18n.js
frontend/src/components/: ApiKeyModal.js  AppSelector.js  ChatBubble.css  ChatBubble.js  ChatWindow.css  ChatWindow.js  ClearChatModal.js  ExistingMemory.js  LocalModelModal.js  MemoryTreeVisualization.js  MessageInput.js  ScreenshotMonitor.js  SettingsPanel.css  SettingsPanel.js  UpdateChecker.js  UpdateModal.css  UpdateModal.js  UploadExportModal.js
mirix/: __init__.py  constants.py  memory.py  sdk.py
mirix/agent/: agent.py  agent_wrapper.py  app_constants.py  temporary_message_accumulator.py
mirix/client/: client.py
mirix/configs/: __init__.py  mirix_azure_example.yaml  mirix_custom_model.yaml  mirix_gpt4.yaml
mirix/functions/function_sets/: __init__.py  base.py  extras.py  memory_tools.py
mirix/functions/mcp_client/: __init__.py  base_client.py  exceptions.py  gmail_client.py  manager.py  stdio_client.py  types.py
mirix/helpers/: converters.py
mirix/llm_api/: azure_openai_client.py  google_ai_client.py  llm_client.py  openai_client.py
mirix/orm/: agent.py  block.py  cloud_file_mapping.py  enums.py  episodic_memory.py  file.py  knowledge_vault.py  message.py  procedural_memory.py  resource_memory.py  semantic_memory.py  user.py
mirix/prompts/system/screen_monitor/: chat_agent.txt  chat_agent_monitor_on.txt
mirix/schemas/: __init__.py  agent.py  block.py  episodic_memory.py  knowledge_vault.py  llm_config.py  memory.py  message.py  procedural_memory.py  resource_memory.py  semantic_memory.py  tool.py  user.py
mirix/schemas/openai/: __init__.py
mirix/server/: fastapi_server.py  gmail_oauth_handler.py  server.py
mirix/services/: agent_manager.py  block_manager.py  cloud_file_mapping_manager.py  episodic_memory_manager.py  knowledge_vault_manager.py  mcp_marketplace.py  mcp_tool_registry.py  message_manager.py  procedural_memory_manager.py  provider_manager.py  resource_memory_manager.py  semantic_memory_manager.py  tool_manager.py  user_manager.py
mirix/services/helpers/: __init__.py  agent_manager_helper.py
scripts/: build_executable.py
tests/: test_memory.py  test_sdk.py
